# moreskin

./: Cargo.toml  README.md  index.css  index.css.map  index.html  index.scss  moreskin-7cb50e132545c9c7.js  moreskin-7cb50e132545c9c7_bg.wasm  moreskin-9132f2b6819305db.js  moreskin-9132f2b6819305db_bg.wasm  moreskin-b738111e3378a846.js  moreskin-b738111e3378a846_bg.wasm
.github/workflows/: ci.yml
res/: names_map.json
src/: main.css  main.rs  parser.rs
src/parser/: data.rs  loot.rs  mod.rs
