[package]
name = "moreskin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo = "0.6"
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
