[package]
name = "moreskin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
yew = { version = "0.21.0" , features = ["csr"] }
gloo = "0.6"
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
stylist = {version = "0.13.0", features = ["yew_integration", "parser"]}
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }
